# RestlessFunnelBot

./: .gitignore  README.md  manual.py  pyproject.toml
RestlessFunnelBot/: __init__.py  __main__.py  __metadata__.py  bot.py  bot_secrets.py-template  common.py  database.py  db.py  discord_bot.py  mappers.py  messenger.py  models.py  options.py  py.typed  run.py  secrets.py-template  telegram.py  telegram_bot.py  ttldict.py  vk_bot.py
requirements/: basic.txt  speedups.txt
tests/: test_telegram.py  test_ttldict.py  utils.py
